# SIPing

./: .gitignore  README.md
rbping/: .gitignore  README.md
rbping/legacy/agent/: rbping-agent.pl  rbping-agent.py
rbping/legacy/config-ui/: ewbv8.php  ewcfg8.php  ewlookup8.php  ewmenu.php  footer.php  header.php  phpfn8.php  rbping_serverdelete.php  rbping_serverlist.php  rbping_serverview.php
rbping/legacy/config-ui/ckeditor/lang/: cy.js  de.js  ms.js  nl.js  pl.js
rbping/legacy/config-ui/phpcss/: ewpdf.css  rbping_server.css
rbping/legacy/config-ui/phpjs/: ewp8.js
rbping/legacy/config-ui/phplang/: english.xml
rbping/legacy/scripts/: fetch.pl  grapher.cgi  inventory.conf  logrotate.daily  phpip.conf  phpmyadmin.conf  rbping-server.conf  scripts2.tar  switches.txt
rbping/legacy/server/: alerts_updated.py  rbping-server.cgi.20140127  rbping_server_pl.py
rbping_py/: README.md  pyproject.toml
rbping_py/src/rbping_py/: __init__.py  cli.py  settings.py
siping/: README.md
siping/legacy/config-ui/: ewshared8.php  index.php  rbping_serveradd.php  rbping_serveredit.php  rbping_serverinfo.php
siping/legacy/config-ui/ckeditor/lang/: af.js
siping/legacy/scripts/: alerts.pl  fetch2.pl  hosts  hosts2  httpd.conf  insert-rbping.pl  networkinfo.conf  portal.conf  rbping-server.cgi  rbping-server.cgi.bkp  rbping-server.css  rbping-server.pl  switchportstatus.pl  syslog-ng.conf
siping/legacy/server/: test.cgi
siping_py/: README.md  pyproject.toml
siping_py/src/siping/: __init__.py  cli.py  settings.py
