[project]
name = "siping"
version = "0.0.1"
description = "SIPing Python reimplementation (port from legacy Perl/CGI)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.scripts]
siping = "siping.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siping"]
